@@ -1,39 +1,0 @@
-# set this to the full hostname (including scheme) of your Gitea instance
-DRONE_GITEA_SERVER=http://gitea.example.com/
-
-# set this to the bare hostname of your Drone instance
-DRONE_SERVER_HOST=drone.example.com
-
-# set this to http or https, depending whether you intend to serve Drone over SSL or not
-DRONE_SERVER_PROTO=https
-
-# These values are obtained when registering Drone as an OAuth2 application in your Gitea instance
-DRONE_GITEA_CLIENT_ID=
-DRONE_GITEA_CLIENT_SECRET=
-
-# The path to the docker socket
-DOCKER_SOCKET=/var/run/docker.sock
-
-# The path to the MySQL socket
-# FIXME this must be done better, in a more generic way
-MYSQL_SOCKET=/var/run/mysqld/mysqld.sock
-
-# The full datasource path to your Drone database
-DRONE_DATABASE_DATASOURCE=/data/drone.sqlite
-
-# The database driver Drone should use (sqlite, mysql, ...)
-DRONE_DATABASE_DRIVER=sqlite
-
-# Number of agents that should be started concurrently on your Drone instance
-DRONE_RUNNER_CAPACITY=2
-
-# If logging in doesn't work, try setting this to true
-DRONE_GIT_ALWAYS_AUTH=false
-
-# Leave this false if you don't intend to use ACME/Letsencrypt
-# FIXME really??
-DRONE_TLS_AUTOCERT=false
-
-# What port to public from your container. Format:
-# <hostport>:<containerport>, e.g. 8080:80
-DRONE_PUBLISH_PORT=80:80
